--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <!--Volver al inicio del sitio sin scroll-->
+    <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
       <img
@@ -31,7 +33,9 @@
           <a href="https://www.youtube.com/channel/UCkKJNLdjE14UAToRUFBLfDQ/"
             ><img src="/assets/icons8-youtube-48.png" alt="Icono YouTube"
           /></a>
-          <a href="#"><img src="./assets/icons8-instagram-48.png" alt="Icono Instagram"></a>
+          <a href="#"
+            ><img src="./assets/icons8-instagram-48.png" alt="Icono Instagram"
+          /></a>
         </div>
         <hr />
         <!--Barra de separación-->
@@ -132,9 +136,8 @@
           </div>
         </aside>
         <section>
-          <!--Sección de noticias, REALIZAR LA CARGA DE LA MISMA-->
-          <br>
-          <div class="container">
+          <br />
+          <div class="container" id="#principal">
             <h1 class="titulo">Ultimas Noticias</h1>
             <div id="contenedor">
               <!-- Lista de Noticias -->
@@ -192,7 +195,7 @@
         </div>
         <div class="formulario_contacto">
           <form action="">
-            <div class="datsoPersonales">
+            <div class="datosPersonales">
               <br />
               <input
                 type="text"
@@ -249,10 +252,10 @@
           </form>
         </div>
       </section>
-    
+
       <script src="./js/main.js"></script>
     </main>
-    
+
     <footer>
       <!--Pie de Sitio-->
       <p>&copy2023 All Right Reserved - Municipalidad de Patagones ||</p>
@@ -264,6 +267,5 @@
         width="138px"
       />
     </footer>
-   
   </body>
 </html>
