--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Behavioral Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Core Meta Data -->
+    <meta content="HollowDevs" name="author" />
+    <meta
+      content="Sitio del Municipio del partido de Patagones"
+      name="Municipio Patagones"
+    />
+    <meta
+      content="Patagones, Municipalidad, Partido de Patagones, Carmen de Patagones"
+      name="keywords"
+    />
+    <!-- Open Graph Meta Data -->
+    <meta content="Sitio del Municipio del Partido de Patagones" />
+    <meta content="HollowDevs" />
+    <meta content="HollowDevs" />
+    <meta content="website" />
+    <meta content="index.html" />
+    <!--Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <!--Styles-->
     <link rel="stylesheet" href="/style/style.css" />
+    <!--Site Name-->
     <title>Patagones Municipio</title>
   </head>
 
@@ -56,7 +76,7 @@
                   <li class="has-sub">
                     <a title="" href="#">El Partido</a>
                     <ul>
-                      <li><a title="" href="#">Educación</a></li>
+                      <li><a title="" href="./pages/underConstruction.html">Educación</a></li>
                       <li><a title="" href="#">Historia</a></li>
                       <li><a title="" href="#">Localidades</a></li>
                     </ul>
