--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                   <li class="has-sub">
                     <a title="" href="#">El Partido</a>
                     <ul>
-                      <li><a title="" href="./pages/underConstruction.html">Educación</a></li>
+                      <li>
+                        <a title="" href="./pages/underConstruction.html"
+                          >Educación</a
+                        >
+                      </li>
                       <li><a title="" href="#">Historia</a></li>
                       <li><a title="" href="#">Localidades</a></li>
                     </ul>
