--- a/pages/underConstruction.html
+++ b/pages/underConstruction.html
@@ -7,7 +7,7 @@
     <!-- Core Meta Data -->
     <meta content="HollowDevs" name="author" />
     <meta
-      content="Sitio del Municipio del partido de Patagones"
+      content="Sitio en construcción Municipalidad del partido de Patagones"
       name="Municipio Patagones"
     />
     <meta
@@ -25,14 +25,16 @@
     <link rel="stylesheet" href="/style/style.css" />
     <title>Sitio en Mantenimiento</title>
   </head>
+
   <body>
     <header>
       <!--Cabecera del Sitio-->
-      <a href="../index.html"><img
-        src="/assets/LogoMunicipio.png"
-        alt="Logo Municipio"
-        height="69px"
-        width="473"
+      <a href="../index.html"
+        ><img
+          src="/assets/LogoMunicipio.png"
+          alt="Logo Municipio"
+          height="69px"
+          width="473"
       /></a>
       <div class="header_right">
         <div class="social_icons">
@@ -55,11 +57,16 @@
         <!--Barra de separación-->
       </div>
     </header>
+
     <main class="centro">
-        <h1>Sitio en Mantenimiento</h1>
-      <img src="../assets/advertencia.gif" alt="Animacion"/>
+      <br>
+      <h1>Sitio en Mantenimiento</h1>
+      <img src="../assets/wait.gif" alt="Animación" />
+      <h2>Disculpe las molestias</h2>
+      <br>
       <br>
     </main>
+
     <footer>
       <!--Pie de Sitio-->
       <p>&copy2023 All Right Reserved - Municipalidad de Patagones ||</p>
