Minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         src="/assets/LogoMunicipio.png"
         alt="Logo Municipio"
         height="69px"
-        width="473"
       />
       <div class="header_right">
         <div class="social_icons">
@@ -159,10 +158,11 @@
             /></a>
           </div>
         </aside>
-        <section>
+        <section class="noticias">
           <br />
           <div class="container" id="#principal">
-            <h1 class="titulo">Ultimas Noticias</h1>
+            <h1 class="titulo"><a href="./pages/noticias.html"> Ultimas Noticias</a></h1>
+            <br>
             <div id="contenedor">
               <!-- Lista de Noticias -->
             </div>
@@ -170,7 +170,7 @@
         </section>
       </div>
 
-      <section>
+      <section class="informativos">
         <!--Sección central, banners informativos-->
         <br />
         <hr />
@@ -277,7 +277,7 @@
         </div>
       </section>
 
-      <script src="./js/main.js"></script>
+      <script src="./js/noticiasCabecera.js"></script> <!--GENERAR UN SOLO CÓDIGO JAVASCRIPT PARA AMBOS SITIOS (MAIN / NOTICIAS)-->
     </main>
 
     <footer>
