--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -8,7 +8,7 @@
     <!-- Core Meta Data -->
     <meta content="HollowDevs" name="author" />
     <meta
-      content="Sitio en construcción Municipalidad del partido de Patagones"
+      content="Noticias del Municipio del partido de Patagones"
       name="Municipio Patagones"
     />
     <meta
@@ -16,27 +16,30 @@
       name="keywords"
     />
     <!-- Open Graph Meta Data -->
-    <meta content="Sitio del Municipio del Partido de Patagones" />
+    <meta content="Noticias del Municipio del Partido de Patagones" />
     <meta content="HollowDevs" />
     <meta content="HollowDevs" />
     <meta content="website" />
+    <meta content="noticias.html" />
+    <!--Styles-->
+    <link rel="stylesheet" href="../style/bootstrap.css" />
     <!--Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <!--Styles-->
-    <link rel="stylesheet" href="/style/style.css" />
-    <title>Patagones Municipio - Sitio en Mantenimiento</title>
+    <!--MicroSite name-->
+    <title>Noticias - Patagones Municipio</title>
   </head>
-
   <body>
+    <!--Volver al inicio del sitio sin scroll-->
+    <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
       <a href="../index.html"
-        ><img
-          src="/assets/LogoMunicipio.png"
-          alt="Logo Municipio"
-          height="69px"
-          width="473"
-      /></a>
+      ><img
+        src="/assets/LogoMunicipio.png"
+        alt="Logo Municipio"
+        height="69px"
+        width="473"
+    /></a>
       <div class="header_right">
         <div class="social_icons">
           <!--Enlaces a las redes sociales-->
@@ -59,19 +62,23 @@
       </div>
     </header>
 
-    <main class="centro">
-      <br />
-      <h1>Sitio en Mantenimiento</h1>
-      <img src="../assets/wait.gif" alt="Animación" />
-      <h2>Disculpe las molestias</h2>
-      <br />
-      <br />
+    <main>
+      <section>
+        <div class="container" id="#principal">
+          <h1>Noticias</h1>
+          <div id="contenedor">
+            <!-- Lista de Noticias -->
+          </div>
+        </div>
+      </section>
+
+      <script src="../js/noticias.js"></script>
     </main>
 
     <footer>
       <!--Pie de Sitio-->
       <p>&copy2023 All Right Reserved - Municipalidad de Patagones ||</p>
-      <p class="devs">Design & developed by</p>
+        <p class="devs">Design & developed by</p>
       <img
         src="/assets/logo-no-background.png"
         alt="Logo Hollow Devs"
