--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -34,12 +34,12 @@
     <header>
       <!--Cabecera del Sitio-->
       <a href="../index.html"
-      ><img
-        src="/assets/LogoMunicipio.png"
-        alt="Logo Municipio"
-        height="69px"
-        width="473"
-    /></a>
+        ><img
+          src="/assets/LogoMunicipio.png"
+          alt="Logo Municipio"
+          height="69px"
+          width="473"
+      /></a>
       <div class="header_right">
         <div class="social_icons">
           <!--Enlaces a las redes sociales-->
@@ -65,7 +65,7 @@
     <main>
       <section>
         <div class="container" id="#principal">
-          <h1>Noticias</h1>
+          <h1 class="text-center pt-5 pb-4">Noticias</h1>
           <div id="contenedor">
             <!-- Lista de Noticias -->
           </div>
@@ -78,7 +78,7 @@
     <footer>
       <!--Pie de Sitio-->
       <p>&copy2023 All Right Reserved - Municipalidad de Patagones ||</p>
-        <p class="devs">Design & developed by</p>
+      <p class="devs">Design & developed by</p>
       <img
         src="/assets/logo-no-background.png"
         alt="Logo Hollow Devs"
