--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
-      <img
-        src="/assets/LogoMunicipio.png"
-        alt="Logo Municipio"
-        height="69px"
-      />
+      <img src="/assets/LogoMunicipio.png" alt="Logo Municipio" height="69px" />
       <div class="header_right">
         <div class="social_icons">
           <!--Enlaces a las redes sociales-->
@@ -161,8 +157,10 @@
         <section class="noticias">
           <br />
           <div class="container" id="#principal">
-            <h1 class="titulo"><a href="./pages/noticias.html"> Ultimas Noticias</a></h1>
-            <br>
+            <h1 class="titulo">
+              <a href="./pages/noticias.html"> Ultimas Noticias</a>
+            </h1>
+            <br />
             <div id="contenedor">
               <!-- Lista de Noticias -->
             </div>
@@ -277,7 +275,8 @@
         </div>
       </section>
 
-      <script src="./js/noticiasCabecera.js"></script> <!--GENERAR UN SOLO CÓDIGO JAVASCRIPT PARA AMBOS SITIOS (MAIN / NOTICIAS)-->
+      <script src="./js/noticiasCabecera.js"></script>
+      <!--GENERAR UN SOLO CÓDIGO JAVASCRIPT PARA AMBOS SITIOS (MAIN / NOTICIAS)-->
     </main>
 
     <footer>
