--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -23,6 +23,7 @@
     <meta content="noticias.html" />
     <!--Styles-->
     <link rel="stylesheet" href="../style/bootstrap.css" />
+    <!--<link rel="stylesheet" href="/style/style.css" />-->
     <!--Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <!--MicroSite name-->
@@ -63,8 +64,20 @@
     </header>
 
     <main>
-      <section>
+      <!--MODIFICAR ARCHIVO "STYLE.CSS" PARA QUE SE PUEDA GENERAR LA TARJETA DESDE EL MISMO Y NO TENER DEPENDENCIA DE "BOOTSTRAP.CSS"-->
+      <!--INCORPORA ESTE PEDAZO DE CÓDIGO MODIFICADO EL ARCHIVO "STYLE.CSS"-->
+      <!--<section class="noticias"> 
+        <br />
         <div class="container" id="#principal">
+          <h1 class="titulo">Ultimas Noticias</h1>
+          <br />
+          <div id="contenedor">-->
+            <!-- Lista de Noticias -->
+          <!--</div>
+        </div>
+      </section>-->
+      <section>
+        <div class="container">
           <h1 class="text-center pt-5 pb-4">Noticias</h1>
           <div id="contenedor">
             <!-- Lista de Noticias -->
