--- a/pages/underConstruction.html
+++ b/pages/underConstruction.html
@@ -16,7 +16,7 @@
       name="keywords"
     />
     <!-- Open Graph Meta Data -->
-    <meta content="Sitio del Municipio del Partido de Patagones" />
+    <meta content="Sitio en construcción del Municipio del Partido de Patagones" />
     <meta content="HollowDevs" />
     <meta content="HollowDevs" />
     <meta content="website" />
