--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             ><img src="/assets/icons8-youtube-48.png" alt="Icono YouTube"
           /></a>
           <a href="#"
-            ><img src="./assets/icons8-instagram-48.png" alt="Icono Instagram"
+            ><img src="/assets/icons8-instagram-48.png" alt="Icono Instagram"
           /></a>
         </div>
         <hr />
@@ -72,12 +72,12 @@
                     <a title="" href="#">El Partido</a>
                     <ul>
                       <li>
-                        <a title="" href="./pages/underConstruction.html"
+                        <a title="" href="/pages/underConstruction.html"
                           >Educación</a
                         >
                       </li>
-                      <li><a title="" href="#">Historia</a></li>
-                      <li><a title="" href="#">Localidades</a></li>
+                      <li><a title="" href="/pages/underConstruction.html">Historia</a></li>
+                      <li><a title="" href="/pages/underConstruction.html">Localidades</a></li>
                     </ul>
                   </li>
 
@@ -94,8 +94,8 @@
                       <li><a title="" href="#">Recursos Humanos</a></li>
                     </ul>
                   </li>
-                  <li><a title="" href="#">Transparencia</a></li>
-                  <li><a title="" href="#">Noticias</a></li>
+                  <li><a title="" href="/pages/underConstruction.html">Transparencia</a></li>
+                  <li><a title="" href="/pages/noticias.html">Noticias</a></li>
                 </ul>
               </li>
               <li class="has-sub"><a title="" href="#contacto">Contacto</a></li>
@@ -157,9 +157,7 @@
         <section class="noticias">
           <br />
           <div class="container" id="#principal">
-            <h1 class="titulo">
-              <a href="./pages/noticias.html"> Ultimas Noticias</a>
-            </h1>
+            <h1 class="titulo">Ultimas Noticias</h1>
             <br />
             <div id="contenedor">
               <!-- Lista de Noticias -->
