--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
       </section>
 
-      <script src="./js/noticiasCabecera.js"></script>
+      <script type="text/javascript" src="./js/noticias.js"></script>
       <!--GENERAR UN SOLO CÓDIGO JAVASCRIPT PARA AMBOS SITIOS (MAIN / NOTICIAS)-->
     </main>
 
