--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -85,7 +85,7 @@
         </div>
       </section>
 
-      <script src="../js/noticias.js"></script>
+      <script type="text/javascript" src="../js/noticias.js"></script>
     </main>
 
     <footer>
