--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
                           >Educación</a
                         >
                       </li>
-                      <li><a title="" href="/pages/underConstruction.html">Historia</a></li>
-                      <li><a title="" href="/pages/underConstruction.html">Localidades</a></li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Historia</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Localidades</a
+                        >
+                      </li>
                     </ul>
                   </li>
 
@@ -94,7 +102,11 @@
                       <li><a title="" href="#">Recursos Humanos</a></li>
                     </ul>
                   </li>
-                  <li><a title="" href="/pages/underConstruction.html">Transparencia</a></li>
+                  <li>
+                    <a title="" href="/pages/underConstruction.html"
+                      >Transparencia</a
+                    >
+                  </li>
                   <li><a title="" href="/pages/noticias.html">Noticias</a></li>
                 </ul>
               </li>
@@ -200,10 +212,8 @@
         <!--Mapa y formulario de contacto-->
         <div class="mapa">
           <iframe
+            title="Mapa Municipalidad"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.1752888294104!2d-62.98645832418182!3d-40.802141710667726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95f698764036757b%3A0x70213430d7ecab53!2sMunicipalidad%20de%20Patagones!5e0!3m2!1ses!2sar!4v1685362929236!5m2!1ses!2sar"
-            width="600"
-            height="250"
-            style="border: 0"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
@@ -246,7 +256,7 @@
             </div>
             <div class="destinoMensaje">
               <br />
-              <select name="areaGobierno" id="area">
+              <select title="Area de Gobierno" name="areaGobierno" id="area">
                 <option value="arm">
                   Agencia de Recaudación Municipal - ARM
                 </option>
@@ -258,8 +268,9 @@
                 <option value="defensaCivil">Defensa Civil</option>
                 <option value="Desarrollo Social">Desarrollo Social</option>
                 <option value="turismo">Dirección de Turismo</option>
-                <option value="omic">OMIC</option></select
-              ><br />
+                <option value="omic">OMIC</option>
+              </select>
+              <br />
               <br />
               <textarea
                 name="mensaje"
