--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <a title="" href="#">Menú</a>
                 <ul>
                   <li class="has-sub">
-                    <a title="" href="#">El Partido</a>
+                    <a title="" href="#elPartido" onclick="pageChanger()"
+                      >El Partido</a
+                    >
                     <ul>
                       <li>
                         <a title="" href="/pages/underConstruction.html"
@@ -166,7 +168,7 @@
             /></a>
           </div>
         </aside>
-        <section class="noticias">
+        <section class="noticias" id="noticias">
           <br />
           <div class="container" id="#principal">
             <h1 class="titulo">Ultimas Noticias</h1>
@@ -175,6 +177,104 @@
               <!-- Lista de Noticias -->
             </div>
           </div>
+        </section>
+        <section class="elPartido" id="elPartido">
+          <h2>El Partido</h2>
+          <br />
+          <p>
+            Patagones es el Partido más austral de la Provincia de Buenos Aires,
+            Argentina. También es el más extenso de la provincia, con una
+            superficie de 1.356.971 hectáreas. <br />
+            Se encuentra entre los ríos Colorado y Negro. Limita al norte con el
+            partido de Villarino, al oeste y sudoeste con la provincia de Río
+            Negro; y al este con el Mar Argentino.
+          </p>
+          <br />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1104030.2830186752!2d-63.321628966891026!3d-40.15382888765808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95f3e0fb802a1d8f%3A0xd1c6aaa64d1b96a4!2sPatagones%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686834927626!5m2!1ses-419!2sar"
+            height="300"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <br />
+          <h3>Leyes de Reconocimiento</h3>
+          <br />
+          <a href="http://patagones.gob.ar/docs/Patagonia_Bonaerense.pdf">
+            Ley N° 12322 - Declaración del Partido de Patagones area Patagonia
+            Bonaerense</a
+          >
+          <br />
+          <a
+            href="http://patagones.gob.ar/docs/Ley_25955_Patagones_Patagonia.pdf"
+            >Ley Nacional N° 25955 - Integración del Partido de Patagones a la
+            Region Patagonica</a
+          >
+          <br />
+          <br />
+          <p>
+            Patagones siempre fue Patagonia desde su fundación el 22 de abril de
+            1779, y estos son los antecedentes que lo confirman:
+          </p>
+          <br />
+          <ul>
+            <li>
+              <strong>Pueblo mas antiguo de Patagonia</strong>, fundado con el
+              nombre de fuerte El Carmen, origen de nuestra ciudad y la vecina
+              Viedma.
+            </li>
+            <li>
+              <strong
+                >Fundado como objetivo estratégico de la corona
+                española:</strong
+              >
+              “Frente al riesgo que los Ingleses o sus colonos insurgentes
+              ocupasen algún puerto en la costa Patagonica, es de la mayor
+              importancia procedamos sin pérdida de tiempo a ocupar allí,
+              algunos puntos esenciales que impidan cualquier tentativa”.
+              Objetivo de la Orden Real 24/3/1778. <br />
+              Para mayor información:
+              <ul>
+                <li>
+                  <a
+                    href="https://patagones.gob.ar/docs/Objetivos_de_la_Corona_Espanola.pdf"
+                    >Objetivos de la Corona Española</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="http://patagones.gob.ar/docs/Casanueva_y_Murgo-CUEVAS_de_Patagones.pdf"
+                    >Cuevas de Patagones de las autoras Maria Laura Casanueva y
+                    Andrea Adriana Murgo</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Antecedentes políticos</strong>, el Partido de Patagones
+              tuvo como jurisdicción, desde la primer constitución de la
+              Provincia de Buenos Aires, hasta la creación de la Gobernación de
+              la Patagonia, (1820 - 1878), el dominio del territorio que
+              comprende desde el río Colorado hasta el cabo de Hornos y desde
+              los Andes al mar.
+            </li>
+            <li>
+              <strong>Haber sido el primer Municipio Patagónico (1854)</strong>
+              y uno de los primeros desde la sanción de la Constitución Nacional
+              de 1853.
+            </li>
+            <li>
+              El <strong>censo poblacional</strong> de la Provincia de Buenos
+              Aires del 08 de Octubre 1881, establece como Región Patagónica al
+              Partido de Patagones.
+            </li>
+            <li>
+              Existen
+              <strong>antecedentes Productivos, Deportivos, Turísticos,</strong>
+              que podes consultar en el Museo Histórico Regional Emma Nozzi de
+              Carmen de Patagones.
+            </li>
+          </ul>
         </section>
       </div>
 
