--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     >
                     <ul>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a title="" href="/pages/educacion.html"
                           >Educación</a
                         >
                       </li>
@@ -169,6 +169,7 @@
           </div>
         </aside>
         <section class="noticias" id="noticias">
+          <!--Sección de las ultimas noticias referidas al Municipio-->
           <br />
           <div class="container" id="#principal">
             <h1 class="titulo">Ultimas Noticias</h1>
@@ -179,6 +180,7 @@
           </div>
         </section>
         <section class="elPartido" id="elPartido">
+          <!--Sección interna OCULTA referida al partido de Patagones y su fundación / Solo se despliega cuando se clickea el enlace correspondiente / -->
           <h2>El Partido</h2>
           <br />
           <p>
@@ -219,9 +221,9 @@
           <br />
           <ul>
             <li>
-              <strong>Pueblo mas antiguo de Patagonia</strong>, fundado con el
-              nombre de fuerte El Carmen, origen de nuestra ciudad y la vecina
-              Viedma.
+              <strong>Pueblo mas antiguo de la Patagonia</strong>, fundado con
+              el nombre de fuerte "El Carmen", origen de nuestra ciudad y la
+              vecina Viedma.
             </li>
             <li>
               <strong
@@ -265,7 +267,7 @@
             </li>
             <li>
               El <strong>censo poblacional</strong> de la Provincia de Buenos
-              Aires del 08 de Octubre 1881, establece como Región Patagónica al
+              Aires del 08 de Octubre 1881, establece como Región Patagonica al
               Partido de Patagones.
             </li>
             <li>
@@ -385,7 +387,6 @@
       </section>
 
       <script type="text/javascript" src="./js/noticias.js"></script>
-      <!--GENERAR UN SOLO CÓDIGO JAVASCRIPT PARA AMBOS SITIOS (MAIN / NOTICIAS)-->
     </main>
 
     <footer>
