Update - Work in Progress

--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -71,7 +71,7 @@
                 <a title="" href="#">Instituciones Educativas</a>
                 <ul>
                   <li>
-                    <a title="" href="#" onclick="tablaEscuelas('Inicial')"
+                    <a title="" href="#" onclick="tablaEscuelas(0)"
                       >Educación Inicial</a
                     >
                   </li>
@@ -119,6 +119,9 @@
                     <a title="" href="#" onclick="tablaEscuelas(9)"
                       >Psicología y Asistencia Social Escolar</a
                     >
+                  </li>
+                  <li>
+                    <a title="" href="#" onclick="mostrar()">Volver</a>
                   </li>
                 </ul>
               </li>
@@ -283,9 +286,7 @@
           </ul>
           <br />
         </section>
-        <section class="school" id="school">
-
-        </section>
+        <section class="school" id="school"></section> <!--Sección donde se muestran las distintas instituciones educativas-->
       </div>
       <script type="text/javascript" src="/js/educacion.js"></script>
     </main>
