Add files / Updates / 26-06-23

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <body>
     <!--Volver al inicio del sitio sin scroll-->
+    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up"></i></a>
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
@@ -386,7 +387,8 @@
         </div>
       </section>
 
-      <script type="text/javascript" src="./js/noticias.js"></script>
+      <script type="text/javascript" src="/js/noticias.js"></script>
+      <script type="text/javascript" src="/js/simplescrollup.js"></script>
     </main>
 
     <footer>
