--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -31,6 +31,7 @@
 
   <body>
     <!--Volver al inicio del sitio sin scroll-->
+    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up"></i></a>
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
@@ -286,9 +287,11 @@
           </ul>
           <br />
         </section>
-        <section class="school" id="school"></section> <!--Sección donde se muestran las distintas instituciones educativas-->
+        <section class="school" id="school"></section>
+        <!--Sección donde se muestran las distintas instituciones educativas-->
       </div>
       <script type="text/javascript" src="/js/educacion.js"></script>
+      <script type="text/javascript" src="/js/simplescrollup.js"></script>
     </main>
 
     <footer>
