Minor Updates - In Process - 28-06-23

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a title="" href="/pages/historia.html"
                           >Historia</a
                         >
                       </li>
