--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -20,7 +20,7 @@
     <meta content="HollowDevs" />
     <meta content="HollowDevs" />
     <meta content="website" />
-    <meta content="index.html" />
+    <meta content="educacion.html" />
     <!--Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <!--Styles-->
@@ -31,7 +31,9 @@
 
   <body>
     <!--Volver al inicio del sitio sin scroll-->
-    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up"></i></a>
+    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up">
+
+    </i></a>
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
