--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         >
                       </li>
                       <li>
-                        <a title="" href="/pages/underConstruction.html"
+                        <a title="" href="/pages/localidades.html"
                           >Localidades</a
                         >
                       </li>
