--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
   <body>
     <!--Volver al inicio del sitio sin scroll-->
-    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up"></i></a>
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
@@ -379,6 +378,7 @@
                 name="mensaje"
                 cols="34"
                 rows="10"
+                style="resize:none"
                 placeholder="Mensaje / Consulta"
                 required
               ></textarea>
@@ -388,7 +388,6 @@
       </section>
 
       <script type="text/javascript" src="/js/noticias.js"></script>
-      <script type="text/javascript" src="/js/simplescrollup.js"></script>
     </main>
 
     <footer>
