--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -24,16 +24,13 @@
     <!--Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <!--Styles-->
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <!--Site Name-->
     <title>Patagones Municipio</title>
   </head>
 
   <body>
     <!--Volver al inicio del sitio sin scroll-->
-    <a href="#up" duraction="5000" height-hide="900" easing="easeInOutQuint" class="simplescrollup__button simplescrollup__button--show"><i class="icon-circle-up">
-
-    </i></a>
     <!--<a class='flotante' href='#' ><img src='./assets/flecha-arriba.png' border="0"/></a>-->
     <header>
       <!--Cabecera del Sitio-->
@@ -293,7 +290,6 @@
         <!--Sección donde se muestran las distintas instituciones educativas-->
       </div>
       <script type="text/javascript" src="/js/educacion.js"></script>
-      <script type="text/javascript" src="/js/simplescrollup.js"></script>
     </main>
 
     <footer>
